--- a/style.css
+++ b/style.css
@@ -13,13 +13,11 @@
     box-sizing: border-box;
 }
 body{
-    width: 100vw;
-    height:100vh;
     font-family: 'Poppins', sans-serif;
-    background-image: linear-gradient(-45deg,black, rgb(177, 177, 177));
-    background-repeat: no-repeat;
-    background: cover;
+    background-color: rgb(78, 78, 78);
     display: flex;
+    width: 100vw;
+    height: 100vh;
 }
 .index-container{
     width: 80vw;
@@ -103,12 +101,14 @@ mark{
 body.light{
     background-image: linear-gradient(white,white);
 }
-
 .container{
     width: 100%;
+    height: 100%;
     margin: 20px 20px 0px 200px;
 }
-
+p{
+    margin-bottom: 10px;
+}
 /*Menu*/
 .logo-joffre{
     width: 150px;
@@ -117,12 +117,12 @@ body.light{
 .menu-navigator{
     display: flex;
     flex-direction: column;
-    padding: 10px 0px;
     background-color: rgb(25, 25, 25);
     position: fixed;
-    height: 100%;
+    height: 100vh;
     min-width: min-content;
     box-shadow: 0px 2px 5px black;
+    
 }
 .menu{
     display: flex;
@@ -146,7 +146,7 @@ body.light{
 .nav-icons{
 display: flex;
 justify-content: space-around ;
-margin: auto 10px 10px 10px;
+margin: 50% 10px 0px 10px;
 }
 .fa-github{
     color: white;
@@ -160,14 +160,13 @@ margin: auto 10px 10px 10px;
     color: purple;
     transform: scale(1.3);
 }
-
 /*Input do Tema Noturno*/
 .checkbox-input{
     position: absolute;
     opacity: 0;
 }
 .checkbox-input:checked + .label-theme .circle{
-    transform: translateX(24px);
+    transform: translateX(21px);
 }
 .theme-group{
     display: flex;
@@ -175,7 +174,8 @@ margin: auto 10px 10px 10px;
 }
 .label-theme{
     background-color: white;
-    border-radius: 52px;
+    border: 1px solid rgb(78, 78, 78);
+    border-radius: 50px;
     cursor: pointer;
     display: flex;
     align-items: center;
@@ -199,7 +199,7 @@ margin: auto 10px 10px 10px;
     color: rgb(255, 145, 0);
 }
 .fa-moon{
-    padding: 4px;
+    padding: 2px;
     color: #5e00c1;
 }
 
